objects/vlocity_cmt__OperatingHours__c.object
<CustomObject>
    <fields>
        <fullName>HoraEntrada__c</fullName>
        <label>Hora entrada</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoraSalida__c</fullName>
        <label>Hora salida</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the matrix row. Used to identify the matrix row across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Operating Hours</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Operating Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operating Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>